--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,3 +1,6 @@
+<h1>
+  Welcome to {{title}}
+</h1>
 <ngb-carousel *ngIf="images">
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
@@ -27,3 +30,8 @@
     </div>
   </ng-template>
 </ngb-carousel>
+<nav>
+  <ul>
+    <li><a routerLink="/recette" routerLinkActive="active">Child A</a></li>
+  </ul>
+</nav>
