--- a/src/app/recette/recette.component.html
+++ b/src/app/recette/recette.component.html
@@ -1,1 +1,57 @@
-<p>recette works!</p>
+<button><a routerLink="/" routerLinkActive="active">Accueil</a></button>
+<button id="add">Ajouter à la liste de course</button>
+<h1 id="titre">Poulet teriyaki</h1>
+<br>
+<div id="images">
+  <img src="https://www.lessecretsduchef.be/img/cms/poulet-teriyaki.jpg" height="200px" width="200px" id="img1">
+  <img src="https://static.750g.com/images/1200-630/1f45e5f01c3e5f023ec899ecaef89f03/img-0632.jpg" height="200px" width="200px">
+</div>
+<br>
+<div id="corps">
+  <div id="ingredients" class="centrer">
+    <h4>Liste des ingrédients</h4>
+    <br>
+    <div *ngFor="let ingredient of ingredients" class="centrer">{{ingredient}}</div>
+  </div>
+  <div id="etapes" class="centrer">
+    <h4>Recette</h4>
+    <br>
+    <div *ngFor="let etape of etapes" class="centrer">{{etape}}</div>
+  </div>
+  <div id="notes" class="centrer">
+    <h4>Commentaires des utilisateurs</h4>
+    <br>
+    <div *ngFor="let note of notes" class="centrer">{{note}}/5</div>
+    <br>
+    <h4>Laisser un commentaire</h4>
+    <div id = "form">
+      <select class="form-control" >
+        <option>0</option>
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+      </select>
+    </div>
+    <input type="text">
+    <button>Envoyer</button>
+  </div>
+</div>
+<br>
+<h4 class="centrer">Suggestion de menu</h4>
+<br>
+<div id="suggestions">
+  <div class="horizontal">
+    <div>Salade de chèvre chaud</div>
+    <img src="https://media.houra.fr/images/widget/recette/gd_recette_salade_chevre_chaud.jpg" height="200px" width="200px">
+  </div>
+  <div class="horizontal">
+    <div>Crumble aux pommes</div>
+    <img src="https://assets.afcdn.com/recipe/20130823/26376_w1024h768c1cx1728cy2424.jpg" height="200px" width="200px">
+  </div>
+  <div class="horizontal">
+    <div>Cake aux fruits</div>
+    <img src="https://static.750g.com/images/600-600/bc18bd5f481aeaff8b3f201430989f31/cake-aux-fruits-confits-inratable.png" height="200px" width="200px">
+  </div>
+</div>
