--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+#title{
+  font-size: 40px;
+  color: black;
+  border-radius: 10px 10px 10px 10px;
+  background-color: lightsalmon;
+  border: 3px black solid;
+  max-width: 22% ;
+}
