--- a/src/app/accueil/accueil.component.css
+++ b/src/app/accueil/accueil.component.css
@@ -10,6 +10,15 @@
   font-weight: bold;
 }
 
+#menusMois{
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.type{
+  color: black;
+}
 #queRecherchezVous{
   font-size: 25px;
   font-weight: bold;
@@ -17,3 +26,29 @@
   left: 12%;
 }
 
+.horizontal{
+  vertical-align: center;
+  text-align: center;
+}
+
+#monthRecipe{
+  margin-left: 150px;
+  display: flex;
+  margin-right: 150px;
+  align-items: center;
+  border: 3px solid black;
+  border-radius: 30px;
+  justify-content: space-evenly;
+
+}
+
+#monthMenus{
+  margin-left: 150px;
+  display: flex;
+  margin-right: 150px;
+  align-items: center;
+  border: 3px solid black;
+  border-radius: 30px;
+  justify-content: space-evenly;
+
+}
