--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -4,7 +4,7 @@
     EasyCook
   </a>
   <a href="/cart">
-    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-cart-check" id="i_cart" viewBox="0 0 16 16">
+    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" color="black" class="bi bi-cart-check" id="i_cart" viewBox="0 0 16 16">
       <path d="M11.354 6.354a.5.5 0 0 0-.708-.708L8 8.293 6.854 7.146a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3z"/>
       <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
     </svg>
@@ -15,12 +15,48 @@
 </div>
 
 <div id="queRecherchezVous">Que recherchez-vous ?
-  <a href="/entrees">Entrees</a>
+  <a class="type" href="/entrees">Entrees</a>
   &nbsp;
-  <a href="/plats"> Plats</a>
+  <a class="type" href="/plats"> Plats</a>
   &nbsp;
-  <a href="/desserts"> Desserts</a>
+  <a class="type" href="/desserts"> Desserts</a>
   &nbsp;
-  <a href="/menus"> Menus</a>
+  <a class="type" href="/menus"> Menus</a>
 </div>
+
+<br>
 <div id="recettesMois"> Les recettes du mois</div>
+<br>
+<div id="monthRecipe">
+  <a href="/recette" class="horizontal">
+    <div>Poulet Teriyaki</div>
+    <img src="https://www.lessecretsduchef.be/img/cms/poulet-teriyaki.jpg" height="200px" width="200px">
+  </a>
+  <div class="horizontal">
+    <div>Lasagnes</div>
+    <img src="https://assets.afcdn.com/recipe/20200408/109520_w1024h1024c1cx1866cy2800.webp" height="200px" width="200px">
+  </div>
+  <div class="horizontal">
+    <div>Ratatouille</div>
+    <img src="https://www.papillesetpupilles.fr/wp-content/uploads/2015/08/Ratatouille-%C2%A9comeirrez-shutterstock.jpg" height="200px" width="200px">
+  </div>
+</div>
+
+<br>
+<div id="menusMois"> Les menus du mois</div>
+<br>
+
+<div id="monthMenus">
+  <div class="horizontal">
+    <div>Veggie</div>
+    <img src="https://www.conservation-nature.fr/wp-content/uploads/2020/02/veggie.jpg" height="200px" width="200px">
+  </div>
+  <div class="horizontal">
+    <div>Protéiné</div>
+    <img src="https://www.foodspring.be/magazine/wp-content/uploads/2020/11/eiweissdiat%C2%A9Aamulya-1.jpg" height="200px" width="200px">
+  </div>
+  <div class="horizontal">
+    <div>Sans Gluten</div>
+    <img src="https://img.cuisineaz.com/680x357/2016/02/02/i60874-plats-sans-gluten.jpg" height="200px" width="200px">
+  </div>
+</div>
