--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -15,7 +15,7 @@
 </div>
 
 <div id="queRecherchezVous">Que recherchez-vous ?
-  <a class="type" href="/entrees">Entrees</a>
+  <a class="type" href="/entrees">Entrées</a>
   &nbsp;
   <a class="type" href="/plats"> Plats</a>
   &nbsp;
