--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -5,4 +5,15 @@
   <h1 id="listeCourses">
     Ma liste de courses
   </h1>
+  <div *ngIf="message === true">
+    <h4>Poulet teriyaki</h4>
+    <div>
+      - 2 blancs de poulet <br>
+      - 240 ml d'eau <br>
+      - 800 ml de sauce soja <br>
+      - 650g de cassonade <br>
+      - 1 gousse d'ail <br>
+      - Miel <br>
+    </div>
+  </div>
 </div>
