--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,24 @@
   border: 3px black solid;
   max-width: 22% ;
 }
+
+#i_cart{
+  position: absolute;
+  right: 50px;
+  top: 0px;
+}
+
+#firstTitle{
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+}
+
+#leftPanel{
+  border: 3px black solid;
+}
+
+.row{
+  margin-right: 0px;
+  margin-left: 0px;
+}
