ajout bar de recherche + bug fix

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -11,6 +11,8 @@
   </a>
 </div>
 
+<app-search></app-search>
+
 <div id="queRecherchezVous">Que recherchez-vous ?
   <a class="type" href="/entrees">Entrées</a>
   &nbsp;
@@ -24,19 +26,20 @@
 <br>
 <div id="recettesMois"> Les recettes du mois</div>
 <br>
+
 <div id="monthRecipe">
-  <a href="/recette" class="horizontal">
+  <a href="/poulet teriyaki" class="horizontal">
     <div>Poulet Teriyaki</div>
     <img src="https://www.lessecretsduchef.be/img/cms/poulet-teriyaki.jpg" height="200px" width="200px">
   </a>
-  <div class="horizontal">
+  <a href="/lasagnes" class="horizontal">
     <div>Lasagnes</div>
     <img src="https://assets.afcdn.com/recipe/20200408/109520_w1024h1024c1cx1866cy2800.webp" height="200px" width="200px">
-  </div>
-  <div class="horizontal">
+  </a>
+  <a href="/ratatouille" class="horizontal">
     <div>Ratatouille</div>
     <img src="https://www.papillesetpupilles.fr/wp-content/uploads/2015/08/Ratatouille-%C2%A9comeirrez-shutterstock.jpg" height="200px" width="200px">
-  </div>
+  </a>
 </div>
 
 <br>
