--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -5,15 +5,28 @@
   <h1 id="listeCourses">
     Ma liste de courses
   </h1>
-  <div *ngIf="message === true">
-    <h4>Poulet teriyaki</h4>
-    <div>
-      - 2 blancs de poulet <br>
-      - 240 ml d'eau <br>
-      - 800 ml de sauce soja <br>
-      - 650g de cassonade <br>
-      - 1 gousse d'ail <br>
-      - Miel <br>
+  <br>
+  <div id="liste">
+    <div class="ingredients" *ngIf="message">
+      <h4>Poulet teriyaki pour 2 personnes</h4>
+      <button class="supprimer" (click)="delete()">Supprimer</button>
+      <div class="corps">
+        <div>
+          <div *ngFor="let ingredient of ingredients" class="centrer">- {{ingredient}}</div>
+        </div>
+        <img src="https://www.lessecretsduchef.be/img/cms/poulet-teriyaki.jpg" height="200px" width="200px">
+      </div>
+    </div>
+    <br>
+    <div class="ingredients">
+      <h4>Poulet teriyaki pour 2 personnes</h4>
+      <button class="supprimer">Supprimer</button>
+      <div class="corps">
+        <div>
+          <div *ngFor="let ingredient of ingredients" class="centrer">- {{ingredient}}</div>
+        </div>
+        <img src="https://www.lessecretsduchef.be/img/cms/poulet-teriyaki.jpg" height="200px" width="200px">
+      </div>
     </div>
   </div>
 </div>
