--- a/src/app/meal-page/meal.component.html
+++ b/src/app/meal-page/meal.component.html
@@ -1,15 +1,15 @@
-<a id="title" href="/">
+<a id="title" routerLink="/">
   EasyCook
 </a>
 
-<a href="/cart">
+<a routerLink="/cart">
   <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" color="black" class="bi bi-cart-check" id="i_cart" viewBox="0 0 16 16">
     <path d="M11.354 6.354a.5.5 0 0 0-.708-.708L8 8.293 6.854 7.146a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3z"/>
     <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
   </svg>
 </a>
 
-<h1 id="titre">Ratatouille</h1>
+<h1 id="titre">{{meal.title}}</h1>
 <br>
 <div id="images">
   <img src="https://www.lessecretsduchef.be/img/cms/poulet-teriyaki.jpg" height="200px" width="200px" id="img1">
@@ -20,17 +20,17 @@
   <div id="ingredients" class="centrer">
     <h4>Liste des ingrédients</h4>
     <br>
-    <div *ngFor="let ingredient of ingredients" class="centrer">{{ingredient}}</div>
+    <div *ngFor="let ingredient of meal.ingredients" class="centrer">{{ingredient}}</div>
   </div>
   <div id="etapes" class="centrer">
     <h4>Recette</h4>
     <br>
-    <div *ngFor="let etape of etapes" class="centrer">{{etape}}</div>
+    <div *ngFor="let etape of meal.etapes" class="centrer">{{etape}}</div>
   </div>
   <div id="notes" class="centrer">
     <h4>Commentaires des utilisateurs</h4>
     <br>
-    <div *ngFor="let note of notes" class="centrer">{{note}}/5</div>
+    <div *ngFor="let note of meal.notes" class="centrer">{{note}}/5</div>
     <br>
     <h4>Laisser un commentaire</h4>
     <div id = "form">
@@ -48,6 +48,7 @@
   </div>
 </div>
 <br>
+<button style="left: 10%;position: absolute;" (click)="addToCart()">Ajouter à la liste de courses</button>
 <h4 class="centrer">Suggestion de menu</h4>
 <br>
 <div id="suggestions">
