--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,9 +1,9 @@
 
 <div>
-  <a id="title" href="/">
+  <a id="title" routerLink="/">
     EasyCook
   </a>
-  <a href="/cart">
+  <a routerLink="/cart">
     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" color="black" class="bi bi-cart-check" id="i_cart" viewBox="0 0 16 16">
       <path d="M11.354 6.354a.5.5 0 0 0-.708-.708L8 8.293 6.854 7.146a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3z"/>
       <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
@@ -14,13 +14,13 @@
 <app-search></app-search>
 
 <div id="queRecherchezVous">Que recherchez-vous ?
-  <a class="type" href="/entrees">Entrées</a>
+  <a class="type" routerLink="/entrees">Entrées</a>
   &nbsp;
-  <a class="type" href="/plats"> Plats</a>
+  <a class="type" routerLink="/plats"> Plats</a>
   &nbsp;
-  <a class="type" href="/desserts"> Desserts</a>
+  <a class="type" routerLink="/desserts"> Desserts</a>
   &nbsp;
-  <a class="type" href="/menus"> Menus</a>
+  <a class="type" routerLink="/menus"> Menus</a>
 </div>
 
 <br>
@@ -28,18 +28,12 @@
 <br>
 
 <div id="monthRecipe">
-  <a href="/poulet teriyaki" class="horizontal">
-    <div>Poulet Teriyaki</div>
-    <img src="https://www.lessecretsduchef.be/img/cms/poulet-teriyaki.jpg" height="200px" width="200px">
-  </a>
-  <a href="/lasagnes" class="horizontal">
-    <div>Lasagnes</div>
-    <img src="https://assets.afcdn.com/recipe/20200408/109520_w1024h1024c1cx1866cy2800.webp" height="200px" width="200px">
-  </a>
-  <a href="/ratatouille" class="horizontal">
-    <div>Ratatouille</div>
-    <img src="https://www.papillesetpupilles.fr/wp-content/uploads/2015/08/Ratatouille-%C2%A9comeirrez-shutterstock.jpg" height="200px" width="200px">
-  </a>
+  <div *ngFor="let meal of mealList">
+    <a routerLink="/meal-page/{{meal.id}}" class="horizontal">
+      <div>{{meal.title}}</div>
+      <img src="{{meal.url}}" height="200px" width="200px">
+    </a>
+  </div>
 </div>
 
 <br>
