--- a/src/app/meal-possiblity/meal-possiblity.component.html
+++ b/src/app/meal-possiblity/meal-possiblity.component.html
@@ -9,24 +9,24 @@
         <div class="ingredients" *ngFor="let meal of mealList">
           <h4>{{meal.title}}</h4>
           <div style="float: right">
-            <input list="browsers" [(ngModel)]="meal.personNumber">
-            <datalist id="browsers">
-              <option value="1">
-              <option value="2">
-              <option value="3">
-              <option value="4">
-              <option value="5">
-              <option value="6">
-              <option value="7">
-              <option value="8">
-              <option value="9">
-              <option value="10">
-              <option value="11">
-              <option value="12">
-              <option value="13">
-              <option value="14">
-              <option value="15">
-            </datalist>
+            <select class="form-control" [(ngModel)]="meal.personNumber">
+              <option>0</option>
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+              <option>6</option>
+              <option>7</option>
+              <option>8</option>
+              <option>9</option>
+              <option>10</option>
+              <option>11</option>
+              <option>12</option>
+              <option>13</option>
+              <option>14</option>
+              <option>15</option>
+            </select>
           </div>
           <div class="corps">
             <div>
