add helps to cook

--- a/src/app/meal-page/meal.component.css
+++ b/src/app/meal-page/meal.component.css
@@ -13,6 +13,9 @@
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
+button{
+  background-color: #BBCCDD;
+}
 
 #i_cart{
   position: absolute;
