--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,4 +1,4 @@
 <div>
-    <input type="text" placeholder="Search in EasyCook" [(ngModel)]="searchTerm" (change)="search()">
+    <input type="text" placeholder="Search a meal or an ingredient" [(ngModel)]="searchTerm" (change)="search()">
     <button (click)="search()">Search</button>
 </div>
