--- a/src/app/entrees/entrees.component.html
+++ b/src/app/entrees/entrees.component.html
@@ -90,6 +90,19 @@
       </ngb-rating>
 
     </div>
+
+    <div class="col-9">
+      <div id="monthRecipe">
+        <div *ngFor="let meal of entreeList">
+          <a routerLink="/meal-page/{{meal.id}}" class="horizontal">
+            <div>{{meal.title}}</div>
+            <img src="{{meal.url}}" height="200px" width="200px">
+          </a>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 </div>
 
