fix URL display + add redirection when searching by food

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -31,7 +31,7 @@
   <div *ngFor="let meal of mealList | slice:0:3">
     <a routerLink="/meal-page/{{meal.id}}" class="horizontal">
       <div>{{meal.title}}</div>
-      <img src="{{meal.url}}" height="200px" width="200px">
+      <img src="{{meal.url[0]}}" height="200px" width="200px">
     </a>
   </div>
 </div>
