--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -44,7 +44,7 @@
             <div>
               <div *ngFor="let ingredient of meal.ingredients" class="centrer">- {{ingredient[0]*meal.personNumber}}{{ingredient[1]}}</div>
             </div>
-            <img src="{{meal.url}}" height="200px" width="200px">
+            <img src="{{meal.url[0]}}" height="200px" width="200px">
           </div>
         </div>
       </div>
