--- a/src/app/meal-page/meal.component.html
+++ b/src/app/meal-page/meal.component.html
@@ -12,8 +12,8 @@
 <h1 id="titre">{{meal.title}}</h1>
 <br>
 <div id="images">
-  <img src="https://www.lessecretsduchef.be/img/cms/poulet-teriyaki.jpg" height="200px" width="200px" id="img1">
-  <img src="https://static.750g.com/images/1200-630/1f45e5f01c3e5f023ec899ecaef89f03/img-0632.jpg" height="200px" width="200px">
+  <img src="{{meal.url[0]}}" width="200px" id="img1">
+  <img src="{{meal.url[1]}}" height="200px" width="200px">
 </div>
 <br>
 <div id="corps">
