--- a/src/app/entrees/entrees.component.html
+++ b/src/app/entrees/entrees.component.html
@@ -96,7 +96,7 @@
         <div *ngFor="let meal of entreeList">
           <a routerLink="/meal-page/{{meal.id}}" class="horizontal">
             <div>{{meal.title}}</div>
-            <img src="{{meal.url}}" height="200px" width="200px">
+            <img src="{{meal.url[0]}}" height="200px" width="200px">
           </a>
         </div>
       </div>
