Harmonization of languages

--- a/src/app/meal-page/meal.component.html
+++ b/src/app/meal-page/meal.component.html
@@ -55,7 +55,7 @@
 </div>
 <br>
 <div style="padding-left: 100px">
-  <label>Persons : </label>
+  <label>Personne : </label>
   <br>
   <input type="number" [(ngModel)]="personNumber">
   <br>
