--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,4 +1,4 @@
 <div>
     <input type="text" placeholder="Chercher un menu ou un ingrédient" [(ngModel)]="searchTerm" (change)="search()">
-    <button (click)="search()">Search</button>
+    <button (click)="search()">Chercher</button>
 </div>
