--- a/src/app/meal-page/meal.component.css
+++ b/src/app/meal-page/meal.component.css
@@ -13,6 +13,21 @@
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
+.form-control3 {
+  display: block;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
 button{
   background-color: #BBCCDD;
 }
@@ -41,8 +56,8 @@ button{
 
 #corps{
   display: flex;
-  align-items: center;
-  justify-content: space-evenly;
+  /*align-items: center;*/
+  justify-content: space-around;
 }
 
 #suggestions{
@@ -56,7 +71,9 @@ button{
 }
 
 #form{
-  width: 60px;
+  /*width: 60px;*/
+  display: flex;
+  flex-direction: row;
 }
 
 .centrer{
