--- a/src/app/meal-page/meal.component.html
+++ b/src/app/meal-page/meal.component.html
@@ -1,20 +1,27 @@
-<a id="title" routerLink="/">
-  EasyCook
-</a>
-
-<a routerLink="/cart">
-  <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" color="black" class="bi bi-cart-check" id="i_cart" viewBox="0 0 16 16">
-    <path d="M11.354 6.354a.5.5 0 0 0-.708-.708L8 8.293 6.854 7.146a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3z"/>
-    <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-  </svg>
-</a>
-
-<h1 id="titre">{{meal.title}}</h1>
+<div style="display:flex; justify-content: space-between; flex-direction: row">
+  <div style="flex: 1">
+    <a id="title" routerLink="/">
+      EasyCook
+    </a>
+  </div>
+  <div>
+    <h1 style="">{{meal.title}}</h1>
+  </div>
+  <div style="flex: 1">
+    <a routerLink="/cart">
+      <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" color="black" class="bi bi-cart-check" id="i_cart" viewBox="0 0 16 16">
+        <path d="M11.354 6.354a.5.5 0 0 0-.708-.708L8 8.293 6.854 7.146a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3z"/>
+        <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+      </svg>
+    </a>
+  </div>
+</div>
 <br>
 <div id="images">
   <img src="{{meal.url[0]}}" width="200px" id="img1">
   <img src="{{meal.url[1]}}" height="200px" width="200px">
 </div>
+<br>
 <br>
 <div id="corps">
   <div id="ingredients" class="centrer">
@@ -29,19 +36,19 @@
     </div>
   </div>
   <div id="etapes" class="centrer">
-    <button mat-button (click)="showHelp()">Montrer les aides</button>
     <h4>Recette</h4>
     <br>
+    <button mat-button (click)="showHelp()">Montrer les aides</button>
+    <br>
+    <br>
     <div *ngFor="let etape of meal.etapes" class="centrer">{{etape}}</div>
+    <br>
   </div>
   <div id="notes" class="centrer">
-    <h4>Commentaires des utilisateurs</h4>
-    <br>
-    <div *ngFor="let comment of meal.comments" class="centrer">{{comment}}/5</div>
-    <br>
     <h4>Laisser un commentaire</h4>
+    <br>
     <div id = "form">
-      <select class="form-control" [(ngModel)]="rate">
+      <select class="form-control3" [(ngModel)]="rate">
         <option>1</option>
         <option>2</option>
         <option>3</option>
@@ -51,9 +58,14 @@
       <input type="text" maxlength="40" [(ngModel)]="comment">
       <button mat-button (click)="addComment(meal)">Envoyer</button>
     </div>
+    <br>
+    <h4>Commentaires des utilisateurs</h4>
+    <br>
+    <div style="max-height: 100px;height: 100px; overflow-y: scroll">
+      <div *ngFor="let comment of meal.comments" style="text-align: center;">{{comment}}/5</div>
+    </div>
   </div>
 </div>
-<br>
 <div style="padding-left: 100px">
   <label>Personne : </label>
   <br>
@@ -78,3 +90,4 @@
     <img src="https://static.750g.com/images/600-600/bc18bd5f481aeaff8b3f201430989f31/cake-aux-fruits-confits-inratable.png" height="200px" width="200px">
   </div>
 </div>
+<br>
