--- a/src/app/meal-page/meal.component.html
+++ b/src/app/meal-page/meal.component.html
@@ -75,7 +75,7 @@
 <br>
 <div style="padding-left: 100px; display: flex; flex-direction: row;border-spacing: 10px;">
   <div style="margin: 10px;">
-    <label>Nombre de personne : </label>
+    <label>Nombre de personnes : </label>
     <br>
     <input type="number" [(ngModel)]="personNumber">
   </div>
